<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ddot</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="phone_num">手机号</string>
    <string name="hint_validate_code">输入验证码</string>
    <string name="hint_password">密码: 6~14位英文或数字</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_username">用户名(选填)</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="not_member">还不是会员？</string>
    <string name="login">登陆</string>
    <string name="my_bookmark">我的收藏</string>
    <string name="my_contacts">通讯录</string>
    <string name="logout">安全登出</string>
    <string name="push_notify">通知提醒</string>
    <string name="service_flow">服务流程</string>
    <string name="help">帮助</string>
    <string name="terms_condition">服务条款与制约</string>
    <string name="normal_question">常见问题</string>
    <string name="contact_us">联络我们</string>
    <string name="about_us">关于我们</string>
    <string name="version">版本Android 1.0</string>
    <string name="update_password">修改密码</string>
    <string name="update_address">常用地址</string>
    <string name="client_service">客服</string>
    <string name="bookmark">收藏</string>
    <string name="share">分享</string>
    <string name="free_order">免费预约</string>
    <string name="phone_brand">手机品牌</string>
    <string name="phone_model">手机型号</string>
    <string name="phone_parts">手机部件</string>
    <string name="fix_parts">维修部件</string>
    <string name="store_address">商家位置</string>
    <string name="provide_visit">提供上门\n服务？</string>
    <string name="provide_detection">需要故障\n检测？</string>
    <string name="sort">排序</string>
    <string name="go">GO</string>
    <string name="filter">筛选更多</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="search">搜索</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <!--自定義ListView-->
    <string name="xlistview_header_hint_normal">更多信息</string>
    <string name="xlistview_header_hint_ready">松开以重新整理</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">最后更新:</string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready">更多信息</string>
    <string name="just_now">刚刚</string>
    <string name="settings">设置</string>
    <string name="show_model">显示模式</string>
    <string name="skip">跳过</string>

    <string name="choose_app">选项</string>
    <string name="cancel">取消</string>
    <string name="app_id">446435425526253</string>
    <string name="choose_brand">请选择品牌</string>
    <string name="choose_fixed_parts">请选择维修部件</string>
    <string name="choose_model">请选择手机型号</string>


</resources>
