<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/d_base_bg"
              android:id="@+id/linear_all">

    <include android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/d_layout_back"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                >
            <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edt_height"
                        android:id="@+id/edt_phone"
                        android:layout_toLeftOf="@+id/btn_getValidateCode"
                        android:hint="@string/phone_num"
                        android:background="@drawable/edt_bg"
                        android:padding="5dp"
                        android:textSize="14dp"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_height_1"
                        android:text="@string/get_validate_code"
                        android:id="@+id/btn_getValidateCode"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/corner_all_orange"
                        android:textColor="@color/d_white"
                        android:padding="5dp"/>
            </RelativeLayout>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:id="@+id/edt_vali_code"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_validate_code"
                    android:textSize="14dp"
                    android:padding="5dp"
                    android:background="@drawable/edt_bg"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:id="@+id/edt_pwd"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_password"
                    android:textSize="14dp"
                    android:padding="5dp"
                    android:background="@drawable/edt_bg"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:id="@+id/edt_confirm_pwd"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_confirm_password"
                    android:textIsSelectable="false"
                    android:textSize="14dp"
                    android:padding="5dp"
                    android:background="@drawable/edt_bg"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:id="@+id/edt_username"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_username"
                    android:textSize="14dp"
                    android:padding="5dp"
                    android:background="@drawable/edt_bg"/>

        </LinearLayout>
        <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height_3"
                android:text="立即注册"
                android:id="@+id/btn_Register"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/corner_all_green"
                android:textColor="@color/d_white"/>
    </RelativeLayout>
</LinearLayout>

