<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="55dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/linear_msg" android:layout_weight="1">
        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/d_msg"
                android:scaleType="fitCenter"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="10dp"
                android:layout_marginTop="3dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/linear_search" android:layout_weight="1">
        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/d_search"
                android:scaleType="fitCenter"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="10dp"
                android:layout_marginTop="3dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/linear_me" android:layout_weight="1">
        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/d_me"
                android:scaleType="fitCenter"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textSize="10dp"
                android:layout_marginTop="3dp"/>
    </LinearLayout>
</LinearLayout>